fix bug background event not showing Fullcalendar

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -63,7 +63,8 @@
 *::after {
 	box-sizing: border-box;
 	margin: 0;
-	position: relative;
+	/* position: relative; */
+	/* fix bug highlighting backqround events in fullcalendar */
 
 	/* font-weight: 200; */
 	font-family: "Montserrat", sans-serif;
